--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
+
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - doge-game</title>
+  <title> doge-game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./styles/style.css">
 
 </head>
 <body>
+  <nav class="navbar navbar-sm bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Kevin Salgado</a>"
+    </div>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="https://kbrian5.github.io/stunning-pancake/">See the code!</a>
+      </li>
+    </ul>
+      
+  </nav>
 <!-- partial:index.partial.html -->
 <div class="row">
-  <h1>Welcome to my Doge Game</h1>
+  <h1>Welcome to my Doge Game. My name is Kevin Salgado</h1>
 </div>
 
 <div class="row">
