--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li class="nav-item">
             <a
               class="nav-link active"
-              href="https://kbrian5.github.io/stunning-pancake/"
+              href="https://github.com/KBrian5/stunning-pancake"
               >see the code!</a
             >
           </li>
